# enterprise_ap_impl

./: .gitignore  README.md  init_control_plane.sh  portal-backup.sh  portal-fw.sh  portal-restore.sh  portal-sync.sh
control-plane/: Makefile  docker-compose.yml  justfile
control-plane/captive-portal/portal-server-cpp/: CMakeLists.txt
control-plane/captive-portal/portal-server-cpp/src/: hmac_sha256.cpp  hmac_sha256.h  http_server.cpp  http_server.h  main.cpp  session_store.cpp  session_store.h  util.cpp  util.h
control-plane/captive-portal/portal-server-cpp/web/: portal.html
control-plane/captive-portal/portal-server-cpp/web/static/: portal.css  portal.js
docs/: REAME.md  architecture.md  auth-decision-pipeline.md  captive-portal.md  control-plane.md  data-plane.md  deployment.md  disk_space_maintenance_guide.md  dns-bypass-ipset-behavior.md  docker-compose-disable-service.md  feature-flag-and-policy-override.md  freeradius-certificates.md  healthcheck.md  lan-captive-portal-dnat-snat.md  lazygit_comprehensive_guide.md  openapi-and-swagger.md  openssl_3.5.0_installation_and_config_ubuntu_20.04.md  os-portal-detection.md  overview.md  portal-aaa-auth-sequence.md  portal-auth-flow-analysis.md  portal-auth-lab-topology-v2.md  portal-auth-lab-topology.md  portal-auth-redirection-js-vs-302.md  portal_auth_freeradius_extend_to_wpa_enterprise.md  radius-daloradius-docker-debug.md  radius-design-notes.md  sequence.md  troubleshooting.md
scripts/: gen_control_plane_files.sh  init-portal-hmac-secret.sh  init_docs_tree.sh  refactor_ap_controller_to_go.sh
(+177 files in other folders)
